# variant-boost-python

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  blog_example.cpp  blog_example_usage.py  strategy1.cpp  strategy1.py  strategy2.cpp  strategy2.py  test_mag_variant.py  test_old_strategies.py  test_vip.py  testcases.cpp  using_variant1.cpp  using_variant2.cpp  variant_in_python.cpp  variant_in_python.hpp
